feat: conteudo whatsapp

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title>Agatha Sophia - 1 Ano</title>
+        <meta property="og:site_name" content="Agatha Sophia - 1 Ano">
+        <meta property="og:title" content="Comemoração">
+        <meta property="og:description" content="Aniversário de 1 Ano">
+        <meta property="og:image" itemprop="image" content="./assets/images/capa.jpg">
+        <meta property="og:type" content="website">
     </head>
     <body>
         <header>
