feat: ajuste head property og

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <meta name="drift" content="false,,,,8r34br74ayds">
         <meta name="analytics" content="UA-89817601-1">
         <meta property="og:locale" content="pt_BR" />
-        <meta property="og:url" content="https://festalab.com.br/aghata-31jul" />
+        <meta property="og:url" content="https://victorf05.github.io/agatha-sofia" />
         <meta property="og:title" content="Agatha Sophia" />
-        <meta property="og:site_name" content="FestaLab" />
+        <meta property="og:site_name" content="GitHub" />
         <meta property="og:description" content="Entre no site e confirme sua presença!" />
         <meta property="og:image" content="https://vibe.festalab.com.br/website_9120657_kOqZ8RU3UAA7GOM78wLYmg.jpg">
         <meta property="og:image:secure_url" content="https://vibe.festalab.com.br/website_9120657_kOqZ8RU3UAA7GOM78wLYmg.jpg">
